feat(kotlin): initial implementation of fido on android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "com.google.android.gms:play-services-fido:+"
 // From node_modules
 }
 
