--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,19 @@
-AmwalAuthReactNative_kotlinVersion=1.7.0
-AmwalAuthReactNative_minSdkVersion=21
-AmwalAuthReactNative_targetSdkVersion=31
+## For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Sat Mar 04 00:07:29 EET 2023
 AmwalAuthReactNative_compileSdkVersion=31
+AmwalAuthReactNative_kotlinVersion=1.7.20
+AmwalAuthReactNative_minSdkVersion=21
 AmwalAuthReactNative_ndkversion=21.4.7075529
+AmwalAuthReactNative_targetSdkVersion=31
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
