--- a/android/build.gradle
+++ b/android/build.gradle
@@ -132,12 +132,18 @@ def kotlin_version = getExtOrDefault('kotlinVersion')
 
 dependencies {
     //noinspection GradleDynamicVersion
-  implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "com.google.android.gms:play-services-fido:19.0.1"
   implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-// From node_modules
+  implementation "tech.amwal.auth:just-pass:1.0.0-alpha01"
+  implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+  implementation(platform("com.squareup.okhttp3:okhttp-bom:5.0.0-alpha.11"))
+  implementation("com.squareup.okhttp3:okhttp")
+  implementation("com.squareup.okhttp3:logging-interceptor")
+  implementation("com.squareup.okhttp3:okhttp-urlconnection")
+  implementation('com.squareup.okhttp3:okhttp-coroutines')
+  implementation('org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4')
 }
 
 if (isNewArchitectureEnabled()) {
