--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@justpass-me/justpass-me-react-native",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React Native SDK for justpass.me Passkeys",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -41,7 +41,7 @@
     "ios",
     "android"
   ],
-  "repository": "https://www.github.com/justpass-me",
+  "repository": "https://www.github.com/justpass-me-react-native",
   "author": "<dev@justpass.me> (https://www.justpass.me)",
   "license": "MIT",
   "bugs": {
