fix: update example app importing

--- a/example/ios/JustPassMeReactNativeExample.xcodeproj/xcshareddata/xcschemes/JustPassMeReactNativeExample.xcscheme
+++ b/example/ios/JustPassMeReactNativeExample.xcodeproj/xcshareddata/xcschemes/JustPassMeReactNativeExample.xcscheme
@@ -60,6 +60,13 @@
             ReferencedContainer = "container:JustPassMeReactNativeExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "JUSTPASSME_ENABLE_NETWORK_LOGGING"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
