Using justpassme android SDK (#3)
* Using justpassme android SDK

* fix(android): example app compiling

* downgrade AGP to 7.4.2

* Use context instead of activity

* Use android target 33

* Adding missing dependecies and Fix bridge signature

* Passing correct promise result in android

* Updating to last version containing fixes for back to client response

---------

Co-authored-by: sameh-amwal <100665288+sameh-amwal@users.noreply.github.com>

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
-JustPassMeReactNative_kotlinVersion=1.7.0
+JustPassMeReactNative_kotlinVersion=1.7.20
 JustPassMeReactNative_minSdkVersion=21
-JustPassMeReactNative_targetSdkVersion=31
-JustPassMeReactNative_compileSdkVersion=31
+JustPassMeReactNative_targetSdkVersion=33
+JustPassMeReactNative_compileSdkVersion=33
 JustPassMeReactNative_ndkversion=21.4.7075529
+android.useAndroidX=true
