--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,14 @@ buildscript {
   def kotlin_version = rootProject.ext.has('kotlinVersion') ? rootProject.ext.get('kotlinVersion') : project.properties['JustPassMeReactNative_kotlinVersion']
 
   repositories {
-      google()
-      mavenCentral()
+    mavenLocal()
+    gradlePluginPortal()
+    google()
+    mavenCentral()
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.5.3'
+    classpath "com.android.tools.build:gradle:7.4.2"
     // noinspection DifferentKotlinGradleVersion
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
@@ -35,7 +37,7 @@ def getExtOrIntegerDefault(name) {
 
 android {
   compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
-
+  namespace 'com.JustPassMeReactNative'
   defaultConfig {
     minSdkVersion getExtOrIntegerDefault('minSdkVersion')
     targetSdkVersion getExtOrIntegerDefault('targetSdkVersion')
@@ -59,6 +61,7 @@ android {
 }
 
 repositories {
+  mavenLocal()
   mavenCentral()
   google()
 
@@ -132,9 +135,16 @@ def kotlin_version = getExtOrDefault('kotlinVersion')
 
 dependencies {
     //noinspection GradleDynamicVersion
-  implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation "com.google.android.gms:play-services-fido:+"
+  implementation "com.facebook.react:react-native:+"
+  implementation("tech.amwal.justpassme:justpassme:1.0.0-beta05")
+  implementation(platform("com.squareup.okhttp3:okhttp-bom:5.0.0-alpha.11"))
+  implementation("com.squareup.okhttp3:okhttp")
+  implementation("com.squareup.okhttp3:logging-interceptor")
+  implementation("com.squareup.okhttp3:okhttp-urlconnection")
+  implementation('com.squareup.okhttp3:okhttp-coroutines:5.0.0-alpha.11')
+
+
 // From node_modules
 }
 
